--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -23,7 +23,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install scrapy
     - name: Run scraping script
-      run: python run_scrapy_job.py
+      run: run: python loanrate/loanrate/run_scrapy_job.py
+
     - name: Debug - list files after scrape
       run: |
         echo "Files after scraping:"
