--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,9 +2,11 @@ name: Daily Web Scraper
 on:
   schedule:
     - cron: '30 3 * * *'  # Runs daily at 9:00 AM IST
-  workflow_dispatch:        # allows manual trigger
+  workflow_dispatch:        # Allows manual trigger
+
 permissions:
-  contents: write  # :white_tick: Allow push access
+  contents: write  # Allow push access
+
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
@@ -14,30 +16,34 @@ jobs:
       with:
         persist-credentials: true
         fetch-depth: 0
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install scrapy
+
     - name: Run scraping script
       run: python loanrate/run_scrapy_job.py
 
     - name: Debug - list files after scrape
       run: |
         echo "Files after scraping:"
-        find loanrate/spiders/data -type f || echo "No files found"
+        find loanrate/loanrate/spiders/data -type f || echo "No files found"
+
     - name: Commit and push updated files
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         # Add files only if they exist
         for file in \
-          Tiaa-bank/loanrate/loanrate/spiders/data/bankrate.json \
-          Tiaa-bank/loanrate/loanrate/spiders/data/bankrates.csv \
-          Tiaa-bank/loanrate/loanrate/spiders/data/log/run_scrapy.log; do
+          loanrate/loanrate/spiders/data/bankrate_loans.json \
+          loanrate/loanrate/spiders/data/bankrate_rates_history.csv \
+          loanrate/loanrate/spiders/data/log/run_scrapy.log; do
           if [ -f "$file" ]; then
             git add "$file"
           else
@@ -46,13 +52,3 @@ jobs:
         done
         git commit -m "Update scraped data $(date '+%Y-%m-%d %H:%M:%S') [skip ci]" || echo "No changes to commit"
         git push
-
-
-
-
-
-
-
-
-
-
